@@ -1,5 +1,5 @@
 from hurry.resource.core import (Library, ResourceInclusion, NeededInclusions,
-                                 mode,
+                                 mode, bottom,
                                  sort_inclusions_topological,
                                  sort_inclusions_by_extension,
                                  generate_code)
