@@ -11,6 +11,13 @@ CHANGES
   ``hurry.resource`` that sets the mode for the current needed
   inclusions.
 
+* Added support for rendering resources into two fragments, one to
+  be included at the top of the HTML page in the ``<head>`` section,
+  the other to be included just before the ``</body>`` section. In 
+  some circumstances doing this can `speed up page load time`_.
+
+  .. `speed up page load time`: http://developer.yahoo.net/blog/archives/2007/07/high_performanc_5.html
+
 0.1 (2008-10-07)
 ================
 
